# s2-mini

./: CMakeLists.txt  README.md
doc/: build_notes.md
examples/: CMakeLists.txt  benchmark.cc
src/: CMakeLists.txt
src/synergia/: CMakeLists.txt
src/synergia/bunch/: CMakeLists.txt  bunch.cc  bunch.h  fixed_t_z_converter.cc  fixed_t_z_converter.h
src/synergia/collective/: CMakeLists.txt  space_charge_mini.cc  space_charge_mini.h
src/synergia/foundation/: CMakeLists.txt  PhysicsConstants.h  four_momentum.h  physical_constants.h  reference_particle.cc  reference_particle.h
src/synergia/lattice/: CMakeLists.txt  lattice.h  lattice_element.cc  lattice_element.h
src/synergia/libFF/: CMakeLists.txt  ff_algorithm.h  ff_drift.cc  ff_drift.h  ff_element.cc  ff_element.h  ff_element_map.cc  ff_element_map.h  ff_quadrupole.cc  ff_quadrupole.h
src/synergia/simulation/: CMakeLists.txt  independent_operation.cc  independent_operation.h  lattice_simulator.h  operator.cc  operator.h  propagator.cc  propagator.h  simulator.h  step.cc  step.h  stepper.cc  stepper.h
src/synergia/utils/: CMakeLists.txt  commxx.cc  commxx.h  digits.h  gsvector.h  logger.cc  logger.h  multi_array_typedefs.h
